@@ -4,7 +4,6 @@ import com.mojang.blaze3d.systems.RenderSystem;
 import net.minecraft.client.render.*;
 import net.minecraft.client.texture.NativeImage;
 import net.minecraft.client.texture.NativeImageBackedTexture;
-import net.minecraft.client.util.BufferAllocator;
 import net.minecraft.client.util.math.MatrixStack;
 import net.vi.mobhealthindicator.render.HeartType;
 import org.joml.Matrix4f;
@@ -13,9 +12,10 @@ public class DynamicBrightnessRenderer {
 
     public static void draw(MatrixStack matrixStack, NativeImageBackedTexture texture, int light) {
         RenderLayer.MultiPhase renderLayer = (RenderLayer.MultiPhase) RenderLayer.getEntityCutoutNoCull(HeartType.EMPTY.icon);
-        renderLayer.phases.phases.get(0).beginAction = () -> RenderSystem.setShaderTexture(0, texture.getGlId());
+        renderLayer.phases.phases.getFirst().beginAction = () -> RenderSystem.setShaderTexture(0, texture.getGlId());
 
-        BufferBuilder bufferBuilder = new BufferBuilder(new BufferAllocator(256), VertexFormat.DrawMode.QUADS, VertexFormats.POSITION_COLOR_TEXTURE_OVERLAY_LIGHT_NORMAL);
+        BufferBuilder bufferBuilder = new BufferBuilder(256);
+        bufferBuilder.begin(VertexFormat.DrawMode.QUADS, VertexFormats.POSITION_COLOR_TEXTURE_OVERLAY_LIGHT_NORMAL);
 
         NativeImage image = texture.getImage();
         assert image != null;
@@ -34,6 +34,6 @@ public class DynamicBrightnessRenderer {
     }
 
     private static void drawVertex(Matrix4f model, BufferBuilder bufferBuilder, float x, float y, float u, float v, int light) {
-        bufferBuilder.vertex(model, x, y, 0).color(1F, 1F, 1F, 1F).texture(u, v).overlay(0, 10).light(light).normal(x, 0, 0);
+        bufferBuilder.vertex(model, x, y, 0).color(1F, 1F, 1F, 1F).texture(u, v).overlay(0, 10).light(light).normal(x, 0, 0).next();
     }
 }
